# rust_by_example

./: .gitignore  404.html  Cargo.toml  hello.html  hello.txt
src/: foo.rs  lib.rs
src/bar/: foo_bar.rs  mod.rs
src/minigrep/: mod.rs
