[package]
name = "rust_by_example"
version = "0.1.0"
authors = [" <li.liang>"]

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
futures = "0.1"
hyper = "0.11.2"
tokio-core = "0.1"
curl = "0.4.8"
rand = "0.3.16"
uuid = { version = "0.5", features = ["v4"] }
rustc-serialize = "0.3.19"
chrono = "0.2.25"
