[package]
name = "rust_by_example"
version = "0.1.0"
authors = [" <li.liang>"]

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
hyper = "0.11.2"
hyper-tls = "0.1.2"
curl = "0.4.8"
rand = "0.3.16"
uuid = { version = "0.5", features = ["v4"] }
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
chrono = "0.2.25"
